update gitconf added gitignore

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,13 @@
 	user = suvit
 [core]
 	autocrlf = input
+[color]
+        ui = true
 [alias]
 	st = status -sb
 	undo = reset --soft HEAD^
 	amend = commit --amend -C HEAD
+        co = checkout
+        ci = commit
+        br = branch
+        hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
