--- a/ansible/local_env.yml
+++ b/ansible/local_env.yml
@@ -2,9 +2,10 @@
   hosts: local
   roles:
     # Tag each role so that we can select individual roles to run with ansible-playbook --tags
-    - {role: git, tags: ['git']}
-    # - {role: package_manager, tags: ['package_manager', 'bootstrap']}
-    # - {role: zsh, tags: ['zsh', 'bootstrap']}
+    # - {role: git, tags: ['git']}
+     - {role: package_manager, tags: ['package_manager', 'bootstrap']}
+     - {role: zsh, tags: ['zsh', 'bootstrap']}
+     - {role: dropbox, tags: ['dropbox']}
     # - {role: python, tags: ['python']}
     # - {role: node, tags: ['node']}
     # - {role: ruby, tags: ['ruby']}
