--- a/code/sublime/settings-user.json
+++ b/code/sublime/settings-user.json
@@ -1,3 +1,12 @@
 {
+  "line_numbers": true,
   "draw_white_space": "all",
+
+  "tab_size": 4,
+  "translate_tabs_to_spaces": true,
+
+  "trim_automatic_white_space": true,
+  "trim_trailing_white_space_on_save": true,
+
+  "highlight_line": true,
 }
